# pytutor-ai

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Makefile  PROJECT-STORY.md  README.md  Untitled  docker-compose.yml  package-lock.json  package.json  render.yaml  setup.bat  setup.sh  vercel.json
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_enc3.py  test_subprocess.py
backend/alembic/: env.py
backend/alembic/versions/: 20aed03ca27b_add_exercises_and_test_cases.py  46acb4dc48ae_add_student_profiles.py  6ff616aeec07_create_users_table.py  72cac29d4848_add_rag_documents_and_chunks.py  83f3f88a382a_add_code_submissions_and_results.py  abd7ed27c40e_add_chat_sessions_and_messages.py  afc8d011c8ae_add_prompt_templates.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  graph.py  state.py
backend/app/api/: router.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging_config.py
backend/app/data/: mc_exercises.py  misconceptions.json
backend/app/database/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  chat.py  exercise.py  misconception.py  profile.py  prompt.py  rag.py  submission.py  user.py
backend/app/observability/: __init__.py  langfuse_setup.py  logger.py  middleware.py  otel_setup.py
backend/app/rag/: __init__.py  embedding.py  loader.py  reranker.py  retriever.py  splitter.py  vector_store.py
backend/app/sandbox/: __init__.py  docker_executor.py  executor.py  security.py
backend/app/schemas/: __init__.py  ai.py  auth.py  chat.py  code.py  common.py  exercise.py  rag.py
backend/app/security/: __init__.py  dependencies.py  jwt.py  password.py
backend/app/services/: __init__.py  agent_service.py  auth_service.py  chat_service.py  code_service.py  exercise_service.py  llm_service.py  misconception_service.py  rag_service.py  (+3 more)
backend/scripts/: seed_knowledge.py
backend/tests/: conftest.py  test_api.py  test_chat_api.py  test_llm.py  test_misconception.py  test_pedagogy.py  test_rag.py
(+71 files in other folders)
