[project]
name = "ai-python-tutor"
version = "0.1.0"
description = "AI-Powered Personalized Python Programming Tutor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FYP Team" }
]

dependencies = [
    # --- Web 框架 ---
    "fastapi>=0.115.0",           # 高性能异步 Web 框架
    "uvicorn[standard]>=0.32.0",  # ASGI 服务器（standard 含 uvloop + httptools 加速）

    # --- 数据校验与配置 ---
    "pydantic>=2.10.0",            # 请求/响应数据校验（FastAPI 的核心依赖）
    "pydantic-settings>=2.7.0",   # 从 .env 文件和环境变量读取配置
    "email-validator>=2.3.0",     # 邮箱格式校验（Pydantic EmailStr 的依赖）

    # --- 数据库 ---
    "sqlalchemy[asyncio]>=2.0.36", # 异步 ORM（asyncio 额外依赖支持 asyncpg/aiosqlite）
    "aiosqlite>=0.20.0",          # SQLite 异步驱动（开发环境使用）
    "asyncpg>=0.30.0",            # PostgreSQL 异步驱动（生产环境使用）
    "alembic>=1.14.0",            # 数据库迁移工具（数据库的 Git）

    # --- 安全 ---
    "python-jose[cryptography]>=3.3.0", # JWT 生成与验证
    "bcrypt>=4.0.0",                    # 密码哈希（安全存储密码）

    # --- HTTP 客户端 ---
    "httpx>=0.28.0",              # 异步 HTTP 客户端（用于调用外部 API）
    "python-multipart>=0.0.18",   # 表单/文件上传支持

    # --- AI ---
    "openai>=1.58.0",             # OpenAI SDK（兼容 DeepSeek API）

    # --- 日志 ---
    "structlog>=24.4.0",          # 结构化日志（比标准 logging 更好用）

    # --- 工具 ---
    "python-dotenv>=1.0.0",       # .env 文件加载

    # --- 测试 ---
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",          # 代码格式化
    "ruff>=0.8.0",            # 代码检查（替代 flake8）
    "mypy>=1.13.0",           # 类型检查
]

test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0",
    "httpx>=0.28.0",
    "coverage>=7.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: tests that require a running backend server",
]
